# uncover-aegis-nif

./: .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  fly.toml  mix.exs
.github/workflows/: cd.yml  ci.yml
config/: config.exs  dev.exs  prod.exs  test.exs
docs/adr/: 0001-rust-nif-vs-elixir-puro.md  0002-fail-secure-como-padrao.md  0003-divida-tecnica-ui-only.md  0004-sqlite-vs-postgres.md  0005-adstock-rust-vs-elixir.md  README.md
lib/: uncover_aegis.ex  uncover_aegis_web.ex
lib/uncover_aegis/: application.ex  campaign_metric.ex  insights.ex  native.ex  pipeline.ex  query_cache.ex  repo.ex  telemetry_store.ex
lib/uncover_aegis/insights/: llm_mock.ex  ollama_client.ex
lib/uncover_aegis/sentinel/: campaign_monitor.ex  dynamic_supervisor.ex  sentinel.ex
lib/uncover_aegis_web/: endpoint.ex  router.ex  schema.ex  user_socket.ex
lib/uncover_aegis_web/components/: layouts.ex
lib/uncover_aegis_web/controllers/: error_html.ex
lib/uncover_aegis_web/controllers/api/: adstock_controller.ex  health_controller.ex  insights_controller.ex  metrics_controller.ex
lib/uncover_aegis_web/live/: insights_live.ex
lib/uncover_aegis_web/plugs/: request_logger.ex
native/aegis_core/: Cargo.toml
native/aegis_core/src/: lib.rs
priv/repo/: seeds.exs
priv/repo/migrations/: 20260317000000_create_campaign_metrics.exs
test/: test_helper.exs
test/support/: conn_case.ex  data_case.ex
test/uncover_aegis/: insights_test.exs  native_test.exs  pipeline_test.exs  sentinel_test.exs
test/uncover_aegis/sentinel/: campaign_monitor_test.exs
(+3 files in other folders)
